[project]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = [
    {name = "Francisco", email = "fgoncal2@student.42lisboa.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (==3.0.3)",
    "numpy (==2.4.6)",
    "matplotlib (==3.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
